--- a/src/templates/package.json.ejs
+++ b/src/templates/package.json.ejs
@@ -3,11 +3,11 @@
     "version": "0.0.0",
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "webpack-dev-server"
-      "build": "webpack",
+      "start": "webpack-dev-server",
+      "build": "webpack"
     },
     "author": {
-      "name": "{{authorFullName}}",
-      "email": "{{authorEmail}}",
-    },
+      "name": "<%= authorFullName %>",
+      "email": "<%= authorEmail %>"
+    }
 }
