Remove auth info from questions

--- a/src/templates/package.json.ejs
+++ b/src/templates/package.json.ejs
@@ -1,13 +1,10 @@
 {
     "name": "<%= projectName %>",
     "version": "0.0.0",
+    "private": true,
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "webpack-dev-server",
       "build": "webpack"
-    },
-    "author": {
-      "name": "<%= authorFullName %>",
-      "email": "<%= authorEmail %>"
     }
 }
