--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <meta
       name="viewport"
       content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="root" />
+    <div id="root"></div>
   </body>
 </html>
