--- a/src/templates/package.json.ejs
+++ b/src/templates/package.json.ejs
@@ -1,10 +1,10 @@
 {
     "name": "<%= projectName %>",
-    "version": "0.0.0",
+    "version": "0.1.0",
     "private": true,
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "webpack-dev-server",
-      "build": "webpack"
+      "build": "webpack --mode=production"
     }
 }
