--- a/src/templates/javascript/webpack.config.js.ejs
+++ b/src/templates/javascript/webpack.config.js.ejs
@@ -27,8 +27,7 @@ module.exports = {
             options: {
               presets: [
                 '@babel/preset-env',
-                '@babel/preset-react',
-                '@babel/preset-typescript',
+                '@babel/preset-react'
               ],
             },
           },
@@ -47,9 +46,6 @@ module.exports = {
         use: ['file-loader'],
       },
     ],
-  },
-  resolve: {
-    extensions: ['*', '.js', '.jsx', '.ts', '.tsx'],
   },
   optimization: {
     moduleIds: 'hashed',
