--- a/src/templates/javascript/webpack.config.js.ejs
+++ b/src/templates/javascript/webpack.config.js.ejs
@@ -1,6 +1,7 @@
 const path = require('path');
 const HtmlWebpackPlugin = require('html-webpack-plugin');
 const { CleanWebpackPlugin } = require('clean-webpack-plugin');
+const ErrorOverlayPlugin = require('error-overlay-webpack-plugin');
 
 module.exports = {
   mode: 'development',
@@ -15,6 +16,7 @@ module.exports = {
       title: '<%= projectName %>',
       template: './index.html',
     }),
+    new ErrorOverlayPlugin()
   ],
   module: {
     rules: [
